assets/css/layout.css
header .breadcrumb {
	display: block;
	font-size: 0.5em;
}

.resource-image {
	display: block;
	background-color: black;
}

.resource-image img {
	display: block;
}

.game-image {
	display: inline-block;
	background-color: black;
}

.game-image img {
	display: block;
}

